syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "auth/api/auth/v1;v1";

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc LoginByCode (LoginByCodeRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login_by_code"
      body: "*"
    };
  }

  rpc ResetPassword (ResetPasswordRequest) returns (AuthNothing) {
    option (google.api.http) = {
      post: "/v1/auth/reset_password"
      body: "*"
    };
  }

  rpc NewPassword (NewPasswordRequest) returns (AuthNothing) {
    option (google.api.http) = {
      post: "/v1/auth/new_password"
      body: "*"
    };
  }

  rpc ChangePassword (ChangePasswordRequest) returns (AuthNothing) {
    option (google.api.http) = {
      post: "/v1/auth/change_password"
      body: "*"
    };
  }

  rpc GenerateCode(GenerateCodeRequest) returns (GenerateCodeResponse) {
    option (google.api.http) = {
      post: "/v1/auth/generate_code"
      body: "*"
    };
  }

  rpc History(HistoryRequest) returns (HistoryResponse) {
    option (google.api.http) = {
      post: "/v1/auth/history"
      body: "*"
    };
  }
}

message AuthNothing {}

message LoginRequest {
  string username = 1; // phone (79003002020) or email (user@name.mail)
  string password = 2;
  bool remember = 3;
}

message LoginResponse {
  string token = 1; // Bearer API JWT token
  google.protobuf.Timestamp until = 2;
}

message LoginByCodeRequest {
  string username = 1;
  string code = 2;
  bool remember = 3;
}

message ResetPasswordRequest {
  string username = 1;
}

message NewPasswordRequest {
  string username = 1;
  string password_reset_uid = 2;
  string password = 3;
}

message ChangePasswordRequest {
  string username = 1;
  string old_password = 2;
  string new_password = 3;
}

message GenerateCodeRequest {
  string username = 1;
}

message GenerateCodeResponse {
  string code = 1;
}

message HistoryRequest {
  int64 user_id = 1;
  int64 limit = 2;
}

message HistoryItem {
  int64 id = 1;
  google.protobuf.Timestamp when = 2;
  string event = 3;
  string ip = 4;
  string user_agent = 5;
}

message HistoryResponse {
  repeated HistoryItem items = 1;
}
