syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "auth/api/auth/v1;v1";

service User {
  rpc List (ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/users/list"
    };
  }

  rpc Add (AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      post: "/v1/users/add"
      body: "*"
    };
  }

  rpc Edit (EditRequest) returns (UserNothing) {
    option (google.api.http) = {
      post: "/v1/users/edit"
      body: "*"
    };
  }

  rpc Activate (ActivateRequest) returns (UserNothing) {
    option (google.api.http) = {
      post: "/v1/users/activate"
      body: "*"
    };
  }

  rpc Deactivate (DeactivateRequest) returns (UserNothing) {
    option (google.api.http) = {
      post: "/v1/users/deactivate"
      body: "*"
    };
  }
}

message UserNothing {}

message ListRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListUser {
  int64 id = 1;
  string displayName = 2;
  string type = 3;
  optional string email = 4;
  optional string phone = 5;
  optional string telegramChatId = 6;
  optional google.protobuf.Timestamp createdAt = 7;
  optional google.protobuf.Timestamp updatedAt = 8;
  optional google.protobuf.Timestamp deactivatedAt = 9;
}

message ListResponse {
  repeated ListUser users = 1;
}

message AddRequest {
  string displayName = 1;
  string type = 2;
  optional string phone = 3;
  optional string email = 4;
  optional string telegramChatId = 5;
  optional string password = 6;
  bool deactivated = 7;
}

message AddResponse {
  int64 id = 1;
}

message EditRequest {
  int64 id = 1;
  optional string displayName = 2;
  optional string type = 3;
  optional string phone = 4;
  optional string email = 5;
  optional string telegramChatId = 6;
  optional string password = 7;
}

message ActivateRequest {
  int64 id = 1;
}

message DeactivateRequest {
  int64 id = 1;
}
